2006-10-03  Brian Gough  <bjg@network-theory.co.uk>

	* poch.c (gsl_sf_lnpoch_e, gsl_sf_lnpoch_sgn_e): corrected
	result->val to 0.0 for x==0, previously returned incorrect value
	1.0

2006-09-24  Brian Gough  <bjg@network-theory.co.uk>

	* laguerre.c (laguerre_large_n): work with small angles to avoid
	cancellation error, computer angular reduction exactly for integer
	eta.

2006-09-22  Brian Gough  <bjg@network-theory.co.uk>

	* zeta.c (gsl_sf_zeta_e): make sin_term exactly zero for negative
	even integers
	(gsl_sf_zetam1_int_e): return value is -1 for zetam1_int with
	negative even integers

2006-03-26  Brian Gough  <bjg@network-theory.co.uk>

	* fermi_dirac.c (fd_neg): initialize s to zero (avoid spurious
	warning from compiler)

2006-02-23  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb.c (gsl_sf_coulomb_wave_FG_e): fixed sign of F_lam_min,
	covers case when k_lam_G is nonzero and F_lam_min and F_lam differ
	in sign.

2006-01-21  Brian Gough  <bjg@network-theory.co.uk>

	* synchrotron.c (gsl_sf_synchrotron_1_e): added first order
	correction term for the taylor expansion
	(gsl_sf_synchrotron_2_e): added first order correction term for
	the taylor expansion

2006-01-20  Brian Gough  <bjg@network-theory.co.uk>

	* bessel_j.c (gsl_sf_bessel_jl_e): limit the use of
	gsl_sf_bessel_Jnu_asympx_e to the range x>100*l*l to satisfy
	the requirement x>>l*l in the asymptotic expansion

	* bessel_In.c (gsl_sf_bessel_In_scaled_e): limit the use of
	gsl_sf_bessel_I_CF1_ser to the region where the continued
	converges with the allowed 20000 terms (|x|<1e7)

2005-12-20  Brian Gough  <bjg@network-theory.co.uk>

	* debye.c (gsl_sf_debye_5_e, gsl_sf_debye_6_e): added n=5,6
	(R. J. Mathar)

2005-11-15  Brian Gough  <bjg@network-theory.co.uk>

	* dilog.c (dilog_xge0): fix calculation of error estimate

2005-08-04  Brian Gough  <bjg@network-theory.co.uk>

	* coulomb.c (gsl_sf_coulomb_wave_sphF_array): fix warning about
	variable shadowing for k
